# pharmaflow-ai

./: .biomeignore  .env  .eslintrc.json  .gitignore  App.tsx  CLEAN_CODE_GUIDELINES.md  CONTRIBUTING.md  LINT_REPORT.md  PLAN.md  PROGRESS.md  README.md  SHORTCUTS_UX_PLAN.md  UI_LOGIC_INVENTORY.md  audit-report.json  available_icons.txt  biome-any-summary.md  biome.json  cashRegisterHelp.ts  components.json  fix-log.json  fix_db_plan.md  index.css  index.html  index.tsx  menuData.ts  menuTranslations.ts  metadata.json  myna_icons_list.txt  netlify.toml  old_LabelPrinter.ts  opencode.json  package-lock.json  package.json  pageRegistry.ts  performance-optimization-plan.md  qz-keys.json  skills-lock.json  tailwind.config.js  testSearch.js  translations.ts  (+4 more)
.antigravitycli/: d9d5bcb4-1b36-4a82-bd83-3f5530016eac.json
.specify/: feature.json  init-options.json  integration.json
api/: time.ts
components/: AIAssistant.tsx  AddProduct.tsx  BarcodeStudio.tsx  CashRegister.tsx  Combobox.tsx  ContextMenu.tsx  CustomerLoyaltyLookup.tsx  CustomerLoyaltyOverview.tsx  CustomerManagement.tsx  CustomerOverview.tsx  Dashboard.tsx  DataTable.tsx  DatePicker.tsx  ExpandedModal.tsx  HelpModal.tsx  Inventory.tsx  InventoryManagement.tsx  Navbar.tsx  POS.tsx  POS.tsx.save  POS.tsx.save.1  PendingApproval.tsx  PurchaseReturns.tsx  Purchases.tsx  RealTimeSalesMonitor.tsx  ReturnHistory.tsx  ReturnModal.tsx  SalesHistory.tsx  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs
(+1197 files in other folders)
