[package]
name = "zinc"
version = "2.0.70"
description = "ZINC - Smart Pharmacy Management System"
authors = ["ZINC Team"]
license = "UNLICENSED"
repository = "https://github.com/ApothecaryMan/pharmaflow-ai"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-thermal-printer = "2"
tauri-plugin-global-shortcut = "2"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_Graphics_Printing"] }
